adjustments to servlet/controller and new jsp files