@@ -2,7 +2,6 @@ package com.skilldistillery.film.controllers;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
@@ -12,7 +11,6 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.servlet.ModelAndView;
 
 import com.skilldistillery.film.dao.FilmDAO;
-import com.skilldistillery.film.entities.Actor;
 import com.skilldistillery.film.entities.Film;
 
 @Controller
@@ -29,8 +27,14 @@ public class FilmControllers {
 	@RequestMapping(path = { "findFilmById.do" }, method = RequestMethod.GET)
 	public ModelAndView findFilmById(@RequestParam("id") String id) {
 		ModelAndView mv = new ModelAndView();
-		Integer integerId = new Integer(id);
-		Film film = filmdao.findFilmById(integerId);
+		Film film = null;
+		try {
+			film = filmdao.findFilmById(Integer.valueOf(id));
+		}
+		catch(Exception e) {
+			mv.setViewName("WEB-INF/NoResults.jsp");
+			return mv;
+		}
 	
 		if (film == null) {
 			mv.setViewName("WEB-INF/NoResults.jsp");
@@ -46,18 +50,28 @@ public class FilmControllers {
 	@RequestMapping(path = { "findFilmByKeyword.do" }, method = RequestMethod.GET)
 	public ModelAndView findFilmsByKeyword(@RequestParam("kw") String kw) {
 		ModelAndView mv = new ModelAndView();
-		List<Film> films = filmdao.findFilmByKeyword(kw);
-
-		if (films == null) {
-
-			mv.addObject("message",
-					"We weren't able to find any movies matching your request.  Maybe try fewer words or different phrases.");
+		List<Film> films = new ArrayList<>();
+		
+		if(kw.equals("")) {
 			mv.setViewName("WEB-INF/NoResults.jsp");
 			return mv;
 		}
-		mv.addObject("films", films);
+		
+		else {
+			films = filmdao.findFilmByKeyword(kw);
+		}
 
+		if (films.size() == 0) {
+
+//			mv.addObject("message",
+//					"We weren't able to find any movies matching your request.  Maybe try fewer words or different phrases.");
+			mv.setViewName("WEB-INF/NoResults.jsp");
+			return mv;
+		}
+		
+		mv.addObject("films", films);
 		mv.setViewName("WEB-INF/results.jsp");
+			
 		return mv;
 	}
 
@@ -66,11 +80,20 @@ public class FilmControllers {
 
 		ModelAndView mv = new ModelAndView();
 
-		Film f = filmdao.createFilm(film);
+//		Film f = filmdao.createFilm(film);
+		Film f = null;
+		
+		try {
+			f = filmdao.createFilm(film);
+		}
+		catch(Exception e) {
+			mv.setViewName("WEB-INF/addFail.jsp");
+			return mv;
+		}
 
-		if (f == null) {
-			mv.addObject("message", "Error: We weren't able to add your movie.  Popcorn on us?");
-			mv.setViewName("WEB-INF/NoResults.jsp");
+		if (f.equals(null)) {
+//			mv.addObject("message", "Error: We weren't able to add your movie.  Popcorn on us?");
+			mv.setViewName("WEB-INF/addFail.jsp");
 			return mv;
 		}
 
@@ -112,8 +135,14 @@ public class FilmControllers {
 		ModelAndView mv = new ModelAndView();
 
 		if (toEditOrNot.toUpperCase().equals("YES")) {
-
-			Film toEdit = filmdao.findFilmById(Integer.valueOf(id));
+			Film toEdit = null;
+			
+			try {
+				toEdit = filmdao.findFilmById(Integer.valueOf(id));
+			}
+			catch(Exception e) {
+				mv.setViewName("WEB-INF/editFail.jsp");
+			}
 
 			if (toEdit != null) {
 				mv.addObject("film", toEdit);
